[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["bicuit"]

[workspace.dependencies]
biscuit-auth = { version = "4.1.1", features = ["datalog-macro"] }
eyre = "0.6.12"
hex = "0.4.3"

[dependencies]
biscuit-auth = {workspace = true }
bytes = "1.6.0"
env_logger = "0.11.3"
eyre = {workspace = true}
futures-util = "0.3.30"
log = "0.4.21"
native-tls = "0.2.11"
nix = { version = "0.28.0", features = ["signal", "term"] }
pty-process = { version = "0.4.0", features = ["async"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.21.0", features = ["tokio-native-tls"] }
tokio-util = { version = "0.7.10", features = ["io"] }
